<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.WorkActivity">

  <LinearLayout
      android:id="@+id/ll_status"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="30dp"
      android:layout_marginEnd="30dp"
      android:background="@drawable/status_bar"
      android:orientation="vertical"
      android:paddingTop="7dp"
      android:paddingBottom="7dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/tv_sttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/sfprotextregular"
        android:gravity="center|center_horizontal"
        android:text="@string/current_status_title"
        android:textColor="@color/darkBlue"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/status"
        android:fontFamily="@font/sfprotextregular"
        android:paddingStart="20dp"
        android:paddingTop="7dp"
        android:paddingEnd="20dp"
        android:paddingBottom="7dp"
        android:text="@string/status_default"
        android:textColor="@color/white"
        android:textSize="18sp" />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_stopwatch"
      android:layout_width="250dp"
      android:layout_height="250dp"
      android:layout_gravity="center_horizontal"
      android:layout_marginStart="24dp"
      android:layout_marginTop="23dp"
      android:layout_marginEnd="24dp"
      android:layout_marginBottom="60dp"
      android:background="@drawable/stopwatch"
      android:gravity="center_vertical|start"
      android:orientation="vertical"
      android:padding="40dp"
      app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ll_status">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:fontFamily="@font/sfprotextmedium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/tv_date"
        android:textColor="@color/stopwatch"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_worktime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:fontFamily="@font/sfprotextmedium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/tv_worktime"
        android:textColor="@color/darkBlue"
        android:textSize="24sp" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_buttons"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginBottom="30dp"
      android:gravity="center_vertical|start"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ll_stopwatch">

    <Button
        android:id="@+id/btn_startwork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:fontFamily="@font/sfprotextmedium"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/btn_startwork"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/cb_home"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:buttonTint="@color/darkBlue"
        android:fontFamily="@font/sfprotextmedium"
        android:text="@string/cb_home"
        android:textColor="@color/darkBlue"
        android:textSize="18sp" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>